--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body{
     color: #ccc;
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Courier, Helvetica, sans-serif;
     font-size: 16px;
     margin: 0;
     padding: 0;
